# understanding-hpda-code

./: .gitignore  CMakeLists.txt  README.md
data/: data_generator.py
doc_example/: CMakeLists.txt
doc_example/1.2/: CMakeLists.txt  helloworld.cpp  in.txt  readme.md
doc_example/2.4/: CMakeLists.txt  ntobject_compile_check.cpp
doc_example/2.6/: CMakeLists.txt  ntobject_basic.cpp  ntobject_serialize.cpp  ntobject_sql.cpp
doc_example/3.4/: CMakeLists.txt  SafeQueue.cpp  aggregater.cpp  aggregator.h  app.cpp  common.h  from_net_main.cpp  netin_main.cpp  netio.cpp  netio.h  netout_main.cpp  readme.md  spliter.cpp  splitter.cpp  splitter.h  to_net_main.cpp  worker.cpp  worker.h
doc_example/3.4/data/: data_generator.py  output.csv
doc_example/3.4/test/: CMakeLists.txt  from_net_main.cpp  to_net_main.cpp
doc_example/4/: CMakeLists.txt  current_engine.txt  new_engine.txt  pp_processor.h  pp_trace.cpp  readme.md
fflib/: .ycm_extra_conf.py  CMakeLists.txt
fflib/example/: CMakeLists.txt
fflib/example/net/: CMakeLists.txt  def_package.cpp
fflib/example/net/pingpong/: CMakeLists.txt  main.cpp
fflib/example/sql/: CMakeLists.txt  binary.cpp  blob.cpp  enum_set.cpp  full_use.cpp  native_type.cpp  ntarray_benchmark.cpp  test_multithread.cpp  test_transactions.cpp  use_ntarray.cpp  use_ntobject.cpp  use_ntobject_in_class.cpp  use_ntobject_in_namespace.cpp  use_table.cpp
fflib/src/net/common/: archive.cpp
fflib/src/net/middleware/: length_packer.cpp  typed_pkg_hub.cpp
fflib/src/net/network/: tcp_connection_base.cpp  udp_point.cpp
hpda/: CMakeLists.txt
hpda/src/engine/: engine.cpp
hpda/src/extractor/internal/: https_request.cpp
include/ff/: functionflow.h
include/ff/functionflow/utilities/: scope_guard.h
include/ff/net/common/: archive.h  archive_data.h
include/ff/net/middleware/: ntpackage.h  package.h
include/ff/sql/: columns.h  common.h  mysql.hpp  stmt.h  table_create.h
include/ff/sql/mysql/: README.md  blob.h  decimal.h  enum_set.h  medium_int.h  mysql_types.h  spatialData.h  string.h  string_bin.h  times.h
include/ff/util/: ntcompact_array.h  ntobject.h
include/ff/util/internal/: user_new_type.h
include/hpda/processor/transform/: split.h
